--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 }
 body{
    background-color: black;
+   touch-action: none;
 }
 
 .canvas1{
@@ -15,4 +16,5 @@ body{
     border: 4px solid white;
     max-width: 100%;
     max-height: 100%;
+    touch-action: none;
 }
